fix(single.php style): fixed menu appearing always visible

--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -53,7 +53,7 @@
 }
 
 #navbar {
-  top: -50px;
+  top: -80px;
   position:fixed;
   width: 100%;
   transition: top 0.3s;
